--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-typography": "^0.15.0",
     "typography": "^0.15.0",
     "typography-plugin-code": "^0.15.0",
-    "underscore.string": "^3.2.2"
+    "underscore.string": "^3.2.2",
+    "v6": "*"
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.22.0",
